--- a/flexbox.html
+++ b/flexbox.html
@@ -43,7 +43,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        gap: 30px;
+        gap: 10px;
       }
 
       .el {
@@ -54,18 +54,19 @@
                flex-basis: auto;
                */
 
-        /* flex-basis: 200px; */
-        /* flex-shrink: 0; */
+        /*  flex-basis: 100px; */
+        /* flex-shrink: 0;
+        flex-grow: 1;
+        flex: 0 0 200px; */
         /* flex: 0 0 200px; */
 
         /* flex-grow: 1; */
-        /*  flex: 1; */
+        flex: 1;
       }
 
       .el--1 {
         align-self: flex-start;
         /*  order: 2; */
-        /* flex-grow: 3; */
       }
 
       .el--5 {
